fix overflow-y

--- a/src/scss/CartPage.scss
+++ b/src/scss/CartPage.scss
@@ -1,6 +1,4 @@
-*{
-    overflow-x: hidden;
-}
+
 
 .all {
     .total {
